# di-api

./: .env  .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: graceful_shutdown.rs  handlers.rs  lib.rs  main.rs  models.rs
src/adapters/api/: mod.rs
src/adapters/api/fingerprint/: fingerprint_controllers.rs  fingerprint_mapper.rs  fingerprint_payload.rs  fingerprint_presenters.rs  mod.rs
src/adapters/api/metrics/: app_state.rs  metrics_controller.rs  mod.rs
src/adapters/api/shared/: authorization.rs  basic_auth.rs  error_handler.rs  error_response.rs  mod.rs  routes.rs
src/adapters/spi/db/: fingerprint_repository.rs  mod.rs
src/application/: mod.rs
src/application/repositories/: fingerprint_repository_abstract.rs  mod.rs
src/application/usecases/: fingerprint_usecases.rs  mod.rs
src/application/utils/: error_handling_utils.rs
src/domain/: entities.rs  error.rs  fingerprint_entity.rs  fingerprint_repository.rs  fingerprint_repository_abstract.rs  kafka_message.rs  mod.rs  repositories.rs  use_cases.rs
src/http_utils/: error_handling.rs  mod.rs  serve_swagger.rs
src/infrastructure/: graceful_shutdown.rs  kafka_producer.rs  metrics.rs  mod.rs  mongo.rs  server.rs  swagger.rs
src/infrastructure/repository/: fingerprint_repository.rs
src/presentation/: routes.rs
tests/integration_tests/: mod.rs  test_fingerprint.rs
