[package]
name = "fingerprint-api"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
warp = "0.3.6"
http = "1.0.0"
bson = "2.9.0"
futures = {version = "0.3.*"}
mongodb = "2.8.0"
async-trait = "0.1.77"
log = "0.4.20"
log4rs = "1.2.0"
futures-util = "0.3.30"
utoipa = { version = "4.2.0" }
utoipa-swagger-ui = { version = "6.0.0" }
config = "0.14.0"
serde_json = "1.0"
tokio-graceful-shutdown = "0.14.2"


[dev-dependencies]
rustfmt = "0.10.0"
clippy = "0.0.302"
