[package]
name = "fingerprint-api"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "fingerprint_api"
path = "src/main.rs"

[lib]
name = "fingerprint_api"
path = "src/lib.rs"

[dependencies]
parking_lot = "0.12.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
warp = "0.3.7"
http = "1.0.0"
bson = "2.10.0"
futures = { version = "0.3.*" }
mongodb = "2.8.0"
async-trait = "0.1.80"
log = "0.4.20"
log4rs = "1.2.0"
futures-util = "0.3.30"
utoipa = { version = "4.2.3" }
utoipa-swagger-ui = { version = "7.0.1" }
config = "0.14.0"
serde_json = "1.0"
tokio-graceful-shutdown = "0.15.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
miette = { version = "7.1.0", features = ["fancy"] }
dotenv = "0.15.0"
testcontainers = "0.16.7"
prometheus = "0.13.4"
opentelemetry = { version = "0.22", features = ["metrics"] }
opentelemetry_sdk = "0.22.1"
once_cell = "1.19.0"
opentelemetry-prometheus = "0.15.0"
base64 = "0.22.1"


[dev-dependencies]
rustfmt = "0.10.0"
clippy = "0.0.302"
